# exoplanet-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/exoplanet_platform/: __init__.py  config.py  domain.py  exceptions.py  http.py  logging_config.py
src/exoplanet_platform/analysis/: __init__.py  habitability.py  orbital.py  stellar.py  transit.py
src/exoplanet_platform/api/: __init__.py  dependencies.py  errors.py  main.py  schemas.py
src/exoplanet_platform/api/routes/: __init__.py  analysis.py  health.py  light_curves.py  planets.py  stars.py
src/exoplanet_platform/cli/: main.py
src/exoplanet_platform/dashboard/: app.py  components.py  launcher.py
src/exoplanet_platform/ingestion/: __init__.py  base.py  gaia.py  jpl_horizons.py  mast.py  nasa_exoplanet_archive.py  simbad.py
src/exoplanet_platform/storage/: __init__.py  database.py  models.py  repository.py
src/exoplanet_platform/storage/migrations/: alembic.ini  env.py
tests/: conftest.py  test_analysis_habitability.py  test_analysis_orbital.py  test_analysis_stellar.py  test_analysis_transit.py  test_api.py  test_cli.py  test_config.py  test_domain.py  test_http.py  test_ingestion_gaia.py  test_ingestion_nasa.py  test_ingestion_simbad.py  test_storage_repository.py
