[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "exoplanet-platform"
version = "0.1.0"
description = "Production-grade platform for analyzing planets from public astronomical data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Exoplanet Platform Team" }]
keywords = ["astronomy", "exoplanet", "transit", "kepler", "tess", "gaia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    # Scientific stack
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "astropy>=6.0",
    # Astronomy data access
    "astroquery>=0.4.7",
    "lightkurve>=2.4",
    # Transit detection
    "batman-package>=2.4; python_version < '3.13'",
    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Dashboard
    "streamlit>=1.32",
    "plotly>=5.19",
    # Infra
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "vcrpy>=6.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-pyyaml",
    "types-cachetools",
]

[project.scripts]
exoplanet = "exoplanet_platform.cli.main:app"
exoplanet-api = "exoplanet_platform.api.main:run"
exoplanet-dashboard = "exoplanet_platform.dashboard.launcher:run"

[tool.hatch.build.targets.wheel]
packages = ["src/exoplanet_platform"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
# Astronomy code uses standard physics notation (E = eccentric anomaly,
# M = mean anomaly, R_E = Earth radius, etc.) — we intentionally do not
# enable pep8-naming (N) rules for this codebase.

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["astroquery.*", "lightkurve.*", "batman.*", "astropy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=exoplanet_platform --cov-report=term-missing -m 'not integration and not slow'"
markers = [
    "integration: tests that hit real external services (deselect by default)",
    "slow: long-running tests",
]
